--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,12 @@
     "version": 2,
     "rewrites": [
         {
-            "source": "/(.*)",
+            "source": "/api/(.*)",
             "destination": "/server/index.js"
+        },
+        {
+            "source": "/(.*)",
+            "destination": "/client/$1"
         }
     ]
 }
